--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,6 @@
 name: Hola Mundo
 eureka:
-    url: http://localhost
-    port: :8010
-    path: /eureka/
+    hostName: localhost
+    port: 8010
+    path: eureka
 
