--- a/user-service.yml
+++ b/user-service.yml
@@ -2,8 +2,16 @@
 # DATABASE
 # ===============================
 spring:
+   profiles: QA
    datasource:
       driver-class-name: com.mysql.jdbc.Driver
    url: jdbc:mysql://localhost:3306/sigco
    username: root
    password: 12345
+   
+spring:
+   profiles: DEV
+   h2: 
+     console:
+        enabled: true
+        path: /h2-console
